--- a/src/content/docs/getting-started/beginners guide.mdx
+++ b/src/content/docs/getting-started/beginners guide.mdx
@@ -21,11 +21,11 @@ If you get stuck at any time or have questions, don’t be afraid to reach out t
 :::
 
 ## The Game Panel
-After you sign up and pay for your Game Host Bros server, you will be sent an email that asks you to sign in to our Game Panel. This is an overview of all the servers you have with us.
+After you sign up and pay for your Game Host Bros server, you will be sent an email that asks you to sign in to our Game Panel. Once you click the link in the email, it will bring you to an overview of all the servers you have with us.
 ![Screenshot of the Game Host Bros Game Panel](../../../assets/guide-images/dashboard.png)
 
 ## Starting & Stopping Your Server
-Once you’re in the game panel, you can simply click the server you want to manager, and you will be brought to the server `Console`. This is where you can `Start`,`Stop`, `Restart` your server and type commands. 
+Once you’re in the game panel, you can simply click the server you want to manage, and you will be brought to the server `Console`. This is where you can `Start`,`Stop`, `Restart` your server and type commands. 
 ![Game Host Bros Console](../../../assets/guide-images/console.png)
 
 ## Edit Server Settings
