add reset server

--- a/src/content/docs/games/7 Days To Die/change version.mdx
+++ b/src/content/docs/games/7 Days To Die/change version.mdx
@@ -22,7 +22,7 @@ Changing the server version is only avaliable with 7D2D Vanilla versions. As mod
 Doing this may cause issues with your world file.
 :::
 
-## Change 7D2D Version On Steam
+## Change 7D2D Client Version On Steam
 
 1. Right-click 7 Days to Die on Steam and select `Properties`.
 2. Go to the `Betas` tab.
