--- a/src/content/docs/games/7 Days To Die/change version.mdx
+++ b/src/content/docs/games/7 Days To Die/change version.mdx
@@ -22,6 +22,30 @@ Changing the server version is only avaliable with 7D2D Vanilla versions. As mod
 Doing this may cause issues with your world file.
 :::
 
+Here is a list of all the current versions you can use:
+
+- public
+- latest_experimental
+- alpha21.2	
+- alpha21.1
+- alpha21.0
+- alpha20.7
+- alpha20.6
+- alpha20.5
+- alpha20.4
+- alpha19.6
+- alpha18.4
+- alpha17.4
+- alpha16.4
+- alpha15.2
+- alpha14.7
+- alpha13.8
+- alpha12.5
+- alpha11.6	
+- alpha10.4
+- alpha9.3
+- alpha8.8
+
 ## Change 7D2D Client Version On Steam
 
 1. Right-click 7 Days to Die on Steam and select `Properties`.
