--- a/src/content/docs/games/7 Days To Die/change maps.mdx
+++ b/src/content/docs/games/7 Days To Die/change maps.mdx
@@ -5,7 +5,7 @@ sidebar:
   label: Change Maps
 ---
 
-Here is how you can change your 7D2D version for both your server and game client.
+Here is how you can change the map on your 7D2D server.
 
 ## Change 7D2D Server Version
 
