--- a/src/content/docs/games/Counter-Strike 2/create gslt.mdx
+++ b/src/content/docs/games/Counter-Strike 2/create gslt.mdx
@@ -1,11 +1,11 @@
 ---
-title: CS2 Create GLST (Steam Game Server Login Token)
-description: Learn how to create a GLST for your CS2 server.
+title: CS2 Create GSLT (Steam Game Server Login Token)
+description: Learn how to create a GSLT for your CS2 server.
 sidebar:
   label: Create Game Server Login Token
 ---
 
-Here is how you create a GLST for CS2 and add it to your server. This is required by Valve to be displayed in the server list.
+Here is how you create a GSLT for CS2 and add it to your server. This is required by Valve to be displayed in the server list.
 
 1. Go [here](https://steamcommunity.com/dev/managegameservers) and login with your Steam account.
 2. Under `App ID` enter `730` for CS2, then name the memo anything you want. 
