--- a/src/content/docs/games/Rust/adding admins.mdx
+++ b/src/content/docs/games/Rust/adding admins.mdx
@@ -2,7 +2,7 @@
 title: Rust Adding Admins
 description: Learn how to add admins to your Rust server.
 sidebar:
-  label: Banning Players
+  label: Adding Admins
 ---
 
 Here is how to add admins to your Rust server.
