Update play workshop maps.mdx

--- a/src/content/docs/games/Counter-Strike 2/play workshop maps.mdx
+++ b/src/content/docs/games/Counter-Strike 2/play workshop maps.mdx
@@ -20,12 +20,12 @@ As you can see from the numbers in the URL, our map ID is `3070288532`
 If you want to have multiple maps, then you will need to create a collection. A workshop collection is simply a group of workshop items. You will also need to modify the startup command for your server.
 
 :::note
-Currently there is a CS2 bug where some workshop collections won't load. You can install the [cs2_WorkshopDefaultMap](https://github.com/Cruze03/cs2_WorkshopDefaultMap) plugin to force a map from your collection to load.
+Currently there is a CS2 bug where some workshop collections won't load. You can install the [cs2_WorkshopDefaultMap](https://github.com/Cruze03/cs2_WorkshopDefaultMap) plugin to force a map from your collection to load. You MUST also have a GSLT for Workshop maps to load otherwise it wont download.
 :::
 
 **Here is what you need:**
 - Workshop Collection ID with maps you want to use
-- An active GSLT
+- An active GSLT (Game Server Token)
 
 Let's first create the collection.
 
