Update play workshop maps.mdx

--- a/src/content/docs/games/Counter-Strike 2/play workshop maps.mdx
+++ b/src/content/docs/games/Counter-Strike 2/play workshop maps.mdx
@@ -25,7 +25,7 @@ Currently there is a CS2 bug where some workshop collections won't load. You can
 
 **Here is what you need:**
 - Workshop Collection ID with maps you want to use
-- An active GSLT (Game Server Token)
+- An active [GSLT (Game Server Token)](/games/counter-strike-2/create-gslt/)
 
 Let's first create the collection.
 
