--- a/src/content/docs/games/Counter-Strike 2/create gslt.mdx
+++ b/src/content/docs/games/Counter-Strike 2/create gslt.mdx
@@ -12,3 +12,7 @@ Here is how you create a GSLT for CS2 and add it to your server. This is require
 3. Visit [Game Host Bros Panel](https://panel.gamehostbros.com/) and select your Counter Strike 2 server.
 4. Go to `Configuration > Startup Parameters`.
 5. Enter your token under `Game Server Token` and then restart your server.
+
+:::note
+If you have the error `Cert request for invalid failed with reason code 5005.  We're not logged into Steam`, that means your token is invalid and may need to be generated again.
+:::
