--- a/src/content/docs/games/Counter-Strike 2/create gslt.mdx
+++ b/src/content/docs/games/Counter-Strike 2/create gslt.mdx
@@ -5,13 +5,14 @@ sidebar:
   label: Create Game Server Login Token
 ---
 
-Here is how you create a GSLT for CS2 and add it to your server. This is required by Valve to be displayed in the server list.
+Here is how you create a GSLT for CS2 and add it to your server. This is **required** by Valve to be displayed in the server list.
 
 1. Go [here](https://steamcommunity.com/dev/managegameservers) and login with your Steam account.
 2. Under `App ID` enter `730` for CS2, then name the memo anything you want. 
 3. Visit [Game Host Bros Panel](https://panel.gamehostbros.com/) and select your Counter Strike 2 server.
 4. Go to `Configuration > Startup Parameters`.
-5. Enter your token under `Game Server Token` and then restart your server.
+5. Enter your token under `Game Server Login Token`. 
+6. Click `Console` in the sidebar and then restart your server.
 
 :::note
 If you have the error `Cert request for invalid failed with reason code 5005.  We're not logged into Steam`, that means your token is invalid and may need to be generated again.
