--- a/src/content/docs/getting-started/beginners guide.mdx
+++ b/src/content/docs/getting-started/beginners guide.mdx
@@ -16,7 +16,7 @@ In this guide I’ll show you the basics of running your new Game Host Bros serv
 
 If you don't have a server with us yet, [click here](https://www.gamehostbros.com/) and get one now.
 
-:::note
+:::warning
 If you get stuck at any time or have questions, don’t be afraid to reach out to a bro with a support ticket or on [Discord](https://discord.gg/FN4XgbAwzr). We are here to help you get everything set up the way you want it.
 :::
 
