--- a/src/content/docs/games/Counter-Strike 2/create gslt.mdx
+++ b/src/content/docs/games/Counter-Strike 2/create gslt.mdx
@@ -2,7 +2,7 @@
 title: CS2 Create GSLT (Steam Game Server Login Token)
 description: Learn how to create a GSLT for your CS2 server.
 sidebar:
-  label: Create Game Server Login Token
+  label: Create GSLT
   badge:
     text: Important
     variant: caution
