--- a/src/content/docs/games/Counter-Strike 2/create gslt.mdx
+++ b/src/content/docs/games/Counter-Strike 2/create gslt.mdx
@@ -34,6 +34,6 @@ Valve has some guidelines on what accounts are able to create a Game Server Logi
 
 ## GSLT Bans
 
-In the past, Valve has token banned server owners that have used plugins that grant users special weapon skins, knifes or ranks. If Valve token bans you, this means you can no longer host servers from your account, and you will be temporarily banned from Competitive mode. We strongly suggest you view Valves [Terms of Service](https://help.steampowered.com/en/faqs/view/07AF-502E-A104-BD4B) to see what is an isn't allowed.
+In the past, Valve has token banned server owners that have used plugins that grant users special weapon skins, knifes or ranks. If Valve token bans you, this means you can no longer host servers from your account, and you will be temporarily banned from Competitive mode. **We strongly suggest you view Valves [Terms of Service](https://help.steampowered.com/en/faqs/view/07AF-502E-A104-BD4B)** to see what is an isn't allowed.
 
 If your GSLT is banned then you will need to use another Steam account to generate tokens in the future.
