--- a/src/content/docs/games/7 Days To Die/change maps.mdx
+++ b/src/content/docs/games/7 Days To Die/change maps.mdx
@@ -5,11 +5,7 @@ sidebar:
   label: Change Maps
 ---
 
-Here is how you can change the map on your 7D2D server.
-
-## Change 7D2D Server Version
-
-Changing the server version is only avaliable with 7D2D Vanilla versions. As mods only work with specific versions of 7D2D, we enforce those server versions for those particular mods.
+Here is how you can change the map on your 7 Day to Die server.
 
 1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Click on your 7D2D server and stop the server.
