--- a/src/content/docs/games/Sven Co-op/change server name.mdx
+++ b/src/content/docs/games/Sven Co-op/change server name.mdx
@@ -1,12 +1,12 @@
 ---
-title: L4D Change Hostname
-description: Learn how to change your server hostname on your L4D server.
+title: Sven Co-op Change Server Name
+description: Learn how to change your server hostname on your Sven Co-op server.
 tableOfContents: false
 sidebar:
-  label: Change Hostname
+  label: Change Server Name
 ---
 
-This is what you do if you need to change your hostname on your L4D server. This is what is displayed to players in the server browser.
+This is what you do if you need to change your server name on your Sven Co-op server, also referrered to as a hostname. This is what is displayed to players in the server browser.
 
 1. Log in to the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Select your server.
