--- a/src/content/docs/games/Counter-Strike Source/change server name.mdx
+++ b/src/content/docs/games/Counter-Strike Source/change server name.mdx
@@ -1,12 +1,12 @@
 ---
-title: CS 1.6 Change Hostname
-description: Learn how to change your server hostname on your CS 1.6 server.
+title: CSS Change Server Name
+description: Learn how to change your server hostname on your CSS server.
 tableOfContents: false
 sidebar:
-  label: Change Hostname
+  label: Change Server Name
 ---
 
-This is what you do if you need to change your hostname on your Counter Strike 1.6 server. This is what is displayed to players in the server browser.
+This is what you do if you need to change your server name on your Counter-Strike Source server, also referrered to as a hostname. This is what is displayed to players in the server browser.
 
 1. Log in to the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Select your server.
