--- a/src/content/docs/games/Half Life 1/change server name.mdx
+++ b/src/content/docs/games/Half Life 1/change server name.mdx
@@ -1,12 +1,12 @@
 ---
-title: HL1 Change Hostname
+title: HL1 Change Server Name
 description: Learn how to change your server hostname on your HL1 server.
 tableOfContents: false
 sidebar:
-  label: Change Hostname
+  label: Change Server Name
 ---
 
-This is what you do if you need to change your hostname on your Half Life server. This is what is displayed to players in the server browser.
+This is what you do if you need to change your server name on your Half-Life server, also referrered to as a hostname. This is what is displayed to players in the server browser.
 
 1. Log in to the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Select your server.
