add config page

--- a/src/content/docs/games/Counter-Strike 2/game modes.mdx
+++ b/src/content/docs/games/Counter-Strike 2/game modes.mdx
@@ -14,20 +14,4 @@ Here is how you change your CS2 server Game Mode from Competitive to something e
 ![cs2 game modes](../../../../assets/guide-images/gamemodes.png)
 5. Restart your server.
 
-## Editing Game Mode Configs
-
-In CS2, all your custom gameplay commands go into your `_server` config files. These are different for each Game Mode you're using. You can edit these files by going to `Managment > File Manager` and then navigate to `/game/csgo/cfg`.
-
-| Game Mode     | Config                                |
-|---------------|---------------------------------------|
-| Casual        | gamemode_casual_server.cfg            |
-| Co-op Strike  | gamemode_coopmission_server.cfg       |
-| Competitive   | gamemode_competitive_server.cfg       |
-| Custom        | gamemode_custom_server.cfg            |
-| Deathmatch    | gamemode_deathmatch_server.cfg        |
-| Demolition    | gamemode_demolition_server.cfg        |
-| Guardian      | gamemode_cooperative_server.cfg       |
-| Training Day  | gamemode_new_user_training.cfg        |
-| Training      | gamemode_training_server.cfg          |
-| Weapons Expert| gamemode_competitive_server.cfg       |
-| Wingman       | gamemode_competitive2v2_server.cfg    |
+Each game mode has its own config files you need to edit to change settings. You can find how to edit your [gamemode configs here](/games/counter-strike-2/config-files/)
