--- a/src/content/docs/games/Counter-Strike 2/play workshop maps.mdx
+++ b/src/content/docs/games/Counter-Strike 2/play workshop maps.mdx
@@ -20,7 +20,7 @@ As you can see from the numbers in the URL, our map ID is `3070288532`
 If you want to have multiple maps, then you will need to create a collection. A workshop collection is simply a group of workshop items. You will also need to modify the startup command for your server.
 
 :::note
-Currently there is a CS2 bug where some workshop collections won't load. You can install the [cs2_WorkshopDefaultMap](https://github.com/Cruze03/cs2_WorkshopDefaultMap) plugin to force a map from your collection to load. You MUST also have a GSLT for Workshop maps to load otherwise it wont download.
+Currently there is a CS2 bug where some workshop collections won't load. You can install the [cs2_WorkshopDefaultMap](https://github.com/Cruze03/cs2_WorkshopDefaultMap) plugin to force a map from your collection to load. You MUST also have a GSLT for Workshop maps to load otherwise it won't download.
 :::
 
 **Here is what you need:**
@@ -37,7 +37,7 @@ Let's first create the collection.
 ![workshop collection ID](../../../../assets/guide-images/workshop-collection-id.png)
 6. Select `Workshop ID`, and put your Collection ID in there and restart your server.
 
-After that, simply restart the server and all the maps will be available. Type `ds_workshop_listmaps` in your console to check.
+After that, simply restart the server and all the maps will be available. Type `ds_workshop_listmaps` in your console to check. You also don't need to edit any mapgroup or mapcycle files as CS2 will automatically create one for you.
 
 :::caution
 The first time you restart the server with a new collection, it will need to download all the maps, so just leave it without restarting the server and let it finish downloading the files.
