--- a/src/content/docs/games/Counter-Strike 2/config files.mdx
+++ b/src/content/docs/games/Counter-Strike 2/config files.mdx
@@ -10,6 +10,8 @@ In this guide you will learn how to edit the different Counter-Strike 2 config f
 ## Main Configs in CS2
 By default, **the configuration files listed below will control 99% of the things you need to do on your server**. Here is an overview of each file and what commands/convars should go where. You can edit these files by going to `Managment > File Manager`.
 
+It's also worth noting that configs load in a specific order they're listed in this document when your CS2 server starts. So if you have the same convar in server.cfg and in gamemode_casual_server.cfg, the convar in the _server file will be the one that is used.
+
 :::danger
 **Don't** go online and copy someone else's entire config file. Only use what you need. When it comes to configuration, **less is more**.
 :::
