--- a/src/content/docs/games/Quake Live/connect to your server.mdx
+++ b/src/content/docs/games/Quake Live/connect to your server.mdx
@@ -13,6 +13,6 @@ Here is how you can join your Quake Live dedicated server using the IP address.
 2. Click on your Quake Live server.
 3. Copy the [server IP address](https://www.youtube.com/watch?v=Ap7DtDF-wYg) from the sidebar.
 4. Open Quake Live.
-5. Open the `Developer Console` (Press the ~ key on your keyboard), type `/connect` followed by your copied server IP, and press Enter to connect.
+5. Press the ~ key on your keyboard to open the `Developer Console`, then type `/connect` followed by your copied server IP, and press Enter to connect.
 
 It should look like this `/connect 104.255.230.162:27202`
