--- a/src/content/docs/getting-started/uploading files.mdx
+++ b/src/content/docs/getting-started/uploading files.mdx
@@ -19,12 +19,12 @@ Using the File Manager is suitable for when you need to upload a small single fi
 4. Press the 3 dots on the top right and click `Upload`.
 
 ## Using SFTP
-This method is suitable if you're uploading multiple files or large files.
+This method is suitable if you're uploading multiple files or large files. You will need a program like [FileZilla](https://filezilla-project.org/download.php?show_all=1) to do this.
 
 1. Load the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Select your server.
 3. In the left-hand menu, click `System > SFTP Details`.
-4. Open FileZilla and locate the `Quickconnect` bar.
+4. Open [FileZilla](https://filezilla-project.org/download.php?show_all=1) and locate the `Quickconnect` bar.
 5. Enter the SFTP connection address you obtained from the game panel into the `Host` field.
 6. Input the `username` and the `password`. The password is the same you use to log in to the Game Panel.
 7. Click the `Quickconnect` button.
