--- a/src/content/docs/games/Palworld/connect to your server.mdx
+++ b/src/content/docs/games/Palworld/connect to your server.mdx
@@ -15,7 +15,7 @@ Here is how you can join your Palworld dedicated server using the IP address.
 4. Open Palworld and click `Join Multiplayer Game`
 5. At the bottom of the screen you will see `127.0.0.1:8211`, replace this with your IP address and click `Connect`
 
-Connect To a Palworld Server With a Password
+## Connect To a Palworld Server With a Password
 
 If your Palworld server has a password set, you will need to add the password to the end of your IP address. It should look like this.
 
