--- a/src/content/docs/games/Palworld/configure palworld.mdx
+++ b/src/content/docs/games/Palworld/configure palworld.mdx
@@ -1,8 +1,8 @@
 ---
-title: How to Configure your Palworld Server
+title: Configure Your Palworld Server
 description: Learn how to configure your Palworld Server 
 sidebar:
-  label: Configure your Server
+  label: Configure Your Server
 ---
 
 Here is how you can locate and configure your Palworld Server
