Update connect to your server.mdx

--- a/src/content/docs/games/Palworld/connect to your server.mdx
+++ b/src/content/docs/games/Palworld/connect to your server.mdx
@@ -17,6 +17,10 @@ Here is how you can join your Palworld dedicated server using the IP address.
 
 ## Connect To a Palworld Server With a Password
 
+:::caution
+Passwords do not current work in Palworld
+:::
+
 If your Palworld server has a password set, you will need to add the password to the end of your IP address. It should look like this.
 
 `IP:PORT;password YOURPASSWORDHERE`
