--- a/src/content/docs/getting-started/beginners guide.mdx
+++ b/src/content/docs/getting-started/beginners guide.mdx
@@ -33,6 +33,8 @@ In the sidebar click `Configuration > Startup Parameters`
 
 This is where you will edit most of the basic settings for your server such as the servers public name, maximum players, setting a password and changing game modes. After any change made here, you will need to restart the server.
 
+Some games also don't have settings in our panel but rely on config files. We have guides on these configs under each game section.
+
 ![Game Host Bros Server Settings](../../../assets/guide-images/startup.png)
 
 :::note
