--- a/src/content/docs/games/Palworld/upload save.mdx
+++ b/src/content/docs/games/Palworld/upload save.mdx
@@ -7,6 +7,8 @@ sidebar:
 
 In this tutorial, we will guide you through the process of uploading an existing save file to your Palworld dedicated server.
 
+If you get stuck at any time, Game Host Bros offers free world transfers. Just reach out to a bro on [Discord)](https://discord.gg/FN4XgbAwzr)
+
 :::caution
 If you're moving from a local Co-op save file, the host will have to start fresh. The saved data only applies to the externally connected players.
 :::
