--- a/src/content/docs/games/Palworld/upload save.mdx
+++ b/src/content/docs/games/Palworld/upload save.mdx
@@ -12,6 +12,9 @@ If you get stuck at any time, Game Host Bros offers free world transfers. Just r
 :::caution
 If you're moving from a local Co-op save file, the host will have to start fresh. The saved data only applies to the externally connected players.
 :::
+:::danger
+You CANNOT transfer a Windows server save file onto our Linux servers. Your character saves will not work. Co-op save files are fine but you will have the issue listed above. 
+:::
 
 1. Go to `Appdata\Local\PAL\Saved\SaveGames` on your local computer and backup the file (You may need to allow hidden folders under (View))
 2. Login to the Game Host Bros panel and stop your Palworld server.
