--- a/src/content/docs/games/Palworld/configure palworld.mdx
+++ b/src/content/docs/games/Palworld/configure palworld.mdx
@@ -7,6 +7,10 @@ sidebar:
 
 Here is how you can locate the config file for your Palworld server.
 
+:::danger
+Your server MUST be stopped before making changes to this file otherwise they wont save.
+:::
+
 1. Firstly, login to the [GameHostBros Panel](https://panel.gamehostbros.com/) and once there, select your Palworld Service
 2. Once on your Palworld Service, ensure you stop it before proceeding.
 3. Once stopped, on the left, navigate to `Management` then `File Manager`.
