--- a/src/content/docs/getting-started/schedules.mdx
+++ b/src/content/docs/getting-started/schedules.mdx
@@ -28,3 +28,15 @@ If you have multiple tasks you want to run, for example you want to run a save c
 Here is a video we've made for schedules. While the Game Panel looks slightly different, the functionality is the same.
 
 <iframe src="//www.youtube.com/embed/MyIA9kse-Ec" allowfullscreen="allowfullscreen"></iframe>
+
+## Popular Times
+
+Here is a list of popular times in cron format.
+
+| Schedule         | Crontab Entry         |
+|------------------|-----------------------|
+| Every 1 hour     | `0 * * * *`           |
+| Every 2 hours    | `0 */2 * * *`         |
+| Every 4 hours    | `0 */4 * * *`         |
+| Every day        | `0 0 * * *`           |
+| Every week       | `0 0 * * 0`           |
