Update connecting to password server.mdx

--- a/src/content/docs/games/Palworld/connecting to password server.mdx
+++ b/src/content/docs/games/Palworld/connecting to password server.mdx
@@ -8,22 +8,22 @@ sidebar:
 
 Here is how to connect to a password protected server in Palworld.
 
-# Step 1: Open the 'Community Servers' List
+**Step 1:** Open the 'Community Servers' List
 Launch Palworld and navigate to the 'Community Servers' section.
 
-# Step 2: Click on a Password-Protected Server
+**Step 2:** Click on a Password-Protected Server
 Select any server from the list that is password-protected. This step is crucial for initiating the workaround.
 
-# Step 3: Enter the Password
+**Step 3:** Enter the Password
 After clicking on the password-protected server, you will be prompted to enter a password. However, enter the password of the server you actually want to connect to, not the one you clicked on. 
 
-# Step 4: Click 'OK', then Click 'No'
+**Step 4:** Click 'OK', then Click 'No'
 After entering the correct password, click 'OK'. Palworld will then prompt you with a message asking if you want to join the server. Click 'No'. This step is essential to trigger the workaround.
 
-# Step 5: Enter the IP:PORT
+**Step 5:** Enter the IP:PORT
 Locate the bottom box, and enter the IP:PORT of the server you want to connect to directly.
 
-# Step 6: Click 'Connect'
+**Step 6:** Click 'Connect'
 Once you've entered the correct IP:PORT, click the 'Connect' button to initiate the connection.
 
 **Important Note:**
