--- a/src/content/docs/games/Palworld/update your server.mdx
+++ b/src/content/docs/games/Palworld/update your server.mdx
@@ -5,7 +5,7 @@ sidebar:
   label: Update Your Server
 ---
 
-This is how you can update your server after a Palworld update. 
+By default, Game Host Bros Palworld servers will automatically update when the server is restarted. This is how you can update your server after a Palworld update. 
 
 1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Click on your Palworld server.
@@ -13,7 +13,7 @@ This is how you can update your server after a Palworld update.
 
 ## My Palworld Server Isn't Updating
 
-If for some reason you can't connect to your Palworld server after an update, your Auto Updates may be disabled. This is how you can re-enable the updates for your server. 
+If for some reason you can't connect to your Palworld server after an update, your Auto Updates may be disabled. This is how you can check and re-enable the updates for your server. 
 
 1. Log in to the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Select your server.
