--- a/src/content/docs/games/Palworld/troubleshooting.mdx
+++ b/src/content/docs/games/Palworld/troubleshooting.mdx
@@ -7,6 +7,18 @@ sidebar:
 
 Here are common Palworld server issues and how to fix them.
 
-## "Connection timed out" When Connecting to your Palworld Server
+### "Connection timed out" When Connecting to your Palworld Server
 
-If you're getting the message `Connection timed out` when you're connecting to your server, this is most likely because you're trying to connect via the `Recent Servers` tab. Currently this doesn't work, and you must connect direct [using the IP address every time.](/games/palworld/connect-to-your-server/)
+If you're getting the message `Connection timed out` when you're connecting to your server, this is most likely because you're trying to connect via the `Recent Servers` tab. Currently, this doesn't work, and you must connect direct [using the IP address every time.](/games/palworld/connect-to-your-server/)
+
+This can also be caused if someone in your guild leaves while other players who were connected to the server are offline. This sometimes can be fixed if they rejoin the guild again otherwise you will need to restart your world.
+
+### Connecting anonymously to Steam Public...Retrying
+
+The `Retrying` issue is caused by Steam connectivity issues. Due to the popularity of Palworld, this is a common issue. To bypass this go to `Configuration > Startup Parameters` and change `Auto Update` to 0
+
+You will also have trouble connecting to your server while Steam has outages. You will sometimes need to wait 5 - 10 minutes to get back in.
+
+### The match you are trying to join is running an incompatible version of the game
+
+Your server needs to be updated. You can restart your server to apply the latest update or follow our [Palworld update guide](/games/palworld/update-your-server/)
