--- a/src/content/docs/account/upgrade your server.mdx
+++ b/src/content/docs/account/upgrade your server.mdx
@@ -6,9 +6,11 @@ sidebar:
   label: Upgrade Your Server
 ---
 
-Follow these easy steps to upgrade or downgrade your server with Game Host Bros.
+Follow these easy steps to upgrade or downgrade your servers CPU cores/threads, Ram or Storage with Game Host Bros.
 
 1. Login to the [Billing Portal](https://portal.gamehostbros.com/).
 2. Under Your `Active Products/Services`, look for the service you want to upgrade and click `VIEW DETAILS`.
 3. In the sidebar on the left, select `Upgrade/Downgrade Options`.
 4. Change the settings you want then click `Continue`.
+
+Sometimes this will be disabled if we're close to capacity so please reach out to support if this is the case.
