--- a/src/content/docs/games/Palworld/set a password.mdx
+++ b/src/content/docs/games/Palworld/set a password.mdx
@@ -8,16 +8,12 @@ sidebar:
 
 Here is how to set a password for your Palworld Server.
 
-## Step 1
-Stop your Palworld Server before making ANY changes.
+**Step 1:** Stop your Palworld Server before making ANY changes.
 
-## Step 2
-Navigate to your Palworld Configuration File, if you're unsure of how to do this follow the guide located (here)[https://guides.gamehostbros.com/games/palworld/configure-palworld/]
+**Step 2:** Navigate to your Palworld Configuration File, if you're unsure of how to do this follow the guide located (here)[https://guides.gamehostbros.com/games/palworld/configure-palworld/]
 
-## Step 3
-Once there, locate the line labelled "ServerPassword", inside of the quotation marks, simply fill in the password you want set on the server.
+**Step 3:** Once there, locate the line labelled "ServerPassword", inside of the quotation marks, simply fill in the password you want set on the server.
 
-## Step 4
-Save the file and then proceed to start the server
+**Step 4:** Save the file and then proceed to start the server
 
 You have now set a password for your Palworld Server.
