--- a/src/content/docs/games/Palworld/update your server.mdx
+++ b/src/content/docs/games/Palworld/update your server.mdx
@@ -7,9 +7,11 @@ sidebar:
 
 By default, Game Host Bros Palworld servers will automatically update when the server is restarted. This is how you can update your server after a Palworld update. 
 
-1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
-2. Click on your Palworld server.
-3. From the console, click the Restart button. 
+
+1. Backup your server otherwise **you will** lose your world. (This is a game bug)
+2. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
+3. Click on your Palworld server.
+4. From the console, click the Restart button. 
 
 ## My Palworld Server Isn't Updating
 
