--- a/src/content/docs/games/Palworld/recover save.mdx
+++ b/src/content/docs/games/Palworld/recover save.mdx
@@ -14,11 +14,11 @@ Continue at your own risk - there is no gurantee that this will work.
 
 ### Workaround #1
 
-1. Have one player join the server (BUT DO NOT CREATE A NEW CHARACTER), simply just stay in the new character creation menu. 
-2.  Now Stop the server. 
-3.  Wait 10-15 minutes. 
-4.  Start the server. 
-5. After that, your character's progress should be back, and you can continue playing. 
+**Step 1:** Have one player join the server (BUT DO NOT CREATE A NEW CHARACTER), simply just stay in the new character creation menu. 
+**Step 2:** Now Stop the server. 
+**Step 3:** Wait 10-15 minutes. 
+**Step 4:** Start the server. 
+**Step 5:** After that, your character's progress should be back, and you can continue playing. 
 
 ### Workaround #2
 
@@ -26,9 +26,9 @@ Continue at your own risk - there is no gurantee that this will work.
 The server must be online for these changes, however, we recommend nobody is connected to it.
 :::
 
-**Step 1: **Navigate to your Palworld Server Files through the [Game Bros Panel](https://panel.gamehostbros.com/)
+**Step 1:** Navigate to your Palworld Server Files through the [Game Bros Panel](https://panel.gamehostbros.com/)
 
-**Step 2: **Once there, navigate to the following directory:
+**Step 2:** Once there, navigate to the following directory:
 ```
 Pal/Saved/SaveGames/0/<bunch of numbers and capital letters>/
 ```
