--- a/src/content/docs/games/Palworld/upload save.mdx
+++ b/src/content/docs/games/Palworld/upload save.mdx
@@ -19,7 +19,7 @@ You CANNOT transfer a Windows server save file onto our Linux servers. Your char
 1. Go to `Appdata\Local\PAL\Saved\SaveGames` on your local computer and backup the file (You may need to allow hidden folders under (View))
 2. Login to the Game Host Bros panel and stop your Palworld server.
 3. In the Game Host Bros panel go to `Managment > File Manager`
-4. Once there navigate to `/home/container/PAL/Save/Savegame/0`
+4. Once there navigate to `PAL/Save/Savegame/0`
 5. You will see a folder with a random number like 723687123871537817253, you need to copy your existing world into that folder.
 
 Please note: To change these files correctly you must use a FTP program, such as FileZilla. 
